deployments/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: docslok
  labels:
    name: docslok
spec:
  ports:
    - nodePort: 30164 
      port: 8090      
      targetPort: 8090  
      protocol: TCP
  selector:           
    app: docslok
  type: LoadBalancer       

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: docslok
spec:                
  selector:         
    matchLabels:
      app: docslok
  replicas: 1     
  template:
    metadata:
      labels:        
        app: docslok
    spec:
      containers:
        - name: docslok
          image: 100598/docslok:1.0
          ports:
            - containerPort: 8090
