deployments/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docslok
spec:
  rules:
  - host: docslok.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docslok
            port:
              number: 8090
